fixed some layout bug

--- a/assets/styles/components/_menu.scss
+++ b/assets/styles/components/_menu.scss
@@ -156,6 +156,7 @@
 }
 
 .cssmenu ul ul {
+    top: 40px;
     position: absolute;
     display: none;
     z-index: 9999999;
@@ -164,7 +165,9 @@
     -moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.1);
 }
-
+.sticky-header .navbar .cssmenu ul ul {
+    top: auto;
+}
 .cssmenu li:hover > ul {
     left: auto;
     a {
